RESOLVED FIXED104978
Fix build warning
https://bugs.webkit.org/show_bug.cgi?id=104978
Summary Fix build warning
Sanghyup Lee
Reported 2012-12-13 17:02:44 PST
Bug 104936 incorrectly remove code that initialize downloadID. Need to initialize downloadID to fix build warning. Source/WebKit2/WebProcess/Downloads/Download.cpp:47:1: warning: unused parameter ‘downloadID’ [-Wunused-parameter]
Attachments
Patch (1.38 KB, patch)
2012-12-13 17:48 PST, Sanghyup Lee
no flags
Patch (1.44 KB, patch)
2012-12-13 18:09 PST, Sanghyup Lee
no flags
Patch (1.39 KB, patch)
2012-12-13 19:30 PST, Sanghyup Lee
no flags
Patch (1.35 KB, patch)
2012-12-13 22:56 PST, Sanghyup Lee
no flags
Sanghyup Lee
Comment 1 2012-12-13 17:48:50 PST
Kentaro Hara
Comment 2 2012-12-13 17:57:39 PST
Comment on attachment 179387 [details] Patch ok
Early Warning System Bot
Comment 3 2012-12-13 18:04:21 PST
Ryuan Choi
Comment 4 2012-12-13 18:06:50 PST
Comment on attachment 179387 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=179387&action=review > Source/WebKit2/WebProcess/Downloads/Download.cpp:49 > + : m_downloadID(downloadID) > : m_downloadManager(downloadManager) Oops, this is wrong. : should be ,
Sanghyup Lee
Comment 5 2012-12-13 18:09:35 PST
Kentaro Hara
Comment 6 2012-12-13 18:10:25 PST
Comment on attachment 179391 [details] Patch sorry for overlooking the ,
Early Warning System Bot
Comment 7 2012-12-13 18:14:20 PST
Kentaro Hara
Comment 8 2012-12-13 18:18:25 PST
Maybe removing the initializer might be intentional. Let's wait for a comment from the patch author (See https://bugs.webkit.org/show_bug.cgi?id=104936).
KyungTae Kim
Comment 9 2012-12-13 18:54:00 PST
The build error is because of the order of the initialization list. Please put the initialization of m_downloadID below the initialization of m_downloadManager same with the header. Source/WebKit2/WebProcess/Downloads/Download.cpp: In constructor ‘WebKit::Download::Download(WebKit::DownloadManager&, uint64_t, const WebCore::ResourceRequest&)’: Source/WebKit2/WebProcess/Downloads/Download.cpp:49:5: error: expected identifier before ‘,’ token Source/WebKit2/WebProcess/Downloads/Download.h:128:14: error: ‘WebKit::Download::m_downloadID’ will be initialized after [-Werror=reorder] Source/WebKit2/WebProcess/Downloads/Download.h:127:22: error: ‘WebKit::DownloadManager& WebKit::Download::m_downloadManager’ [-Werror=reorder] Source/WebKit2/WebProcess/Downloads/Download.cpp:47:1: error: when initialized here [-Werror=reorder]
WebKit Review Bot
Comment 10 2012-12-13 18:58:18 PST
Comment on attachment 179391 [details] Patch Attachment 179391 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15321467 New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
Sanghyup Lee
Comment 11 2012-12-13 19:30:34 PST
Kentaro Hara
Comment 12 2012-12-13 19:35:19 PST
Comment on attachment 179403 [details] Patch Let's wait for a comment from the author of the original patch before landing.
Darin Adler
Comment 13 2012-12-13 22:39:00 PST
We don’t need to wait to land this. It seems clear this was just an editing error. Please land ASAP.
WebKit Review Bot
Comment 14 2012-12-13 22:44:16 PST
Comment on attachment 179403 [details] Patch Rejecting attachment 179403 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: commit-queue/Source/WebKit/chromium/third_party/v8-i18n --revision 159 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 53>At revision 159. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/15321537
Kentaro Hara
Comment 15 2012-12-13 22:49:09 PST
Comment on attachment 179403 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=179403&action=review > Source/WebKit2/ChangeLog:8 > + Additional information of the change such as approach, rationale. Please add per-function descriptions below (OOPS!). You need to describe a change description here. (OOPS is not allowed)
Sanghyup Lee
Comment 16 2012-12-13 22:56:09 PST
WebKit Review Bot
Comment 17 2012-12-13 23:31:54 PST
Comment on attachment 179421 [details] Patch Clearing flags on attachment: 179421 Committed r137716: <http://trac.webkit.org/changeset/137716>
WebKit Review Bot
Comment 18 2012-12-13 23:31:58 PST
All reviewed patches have been landed. Closing bug.
Anders Carlsson
Comment 19 2012-12-14 10:21:26 PST
Thanks for fixing this!
Note You need to log in before you can comment on or make changes to this bug.