Fix build warning https://bugs.webkit.org/show_bug.cgi?id=104978

Patch by Sanghyup Lee <sh53.lee@samsung.com> on 2012-12-13
Reviewed by Kentaro Hara.

Initialize parameter 'downloadID' to fix 'unused parameter' build warning.

* WebProcess/Downloads/Download.cpp:
(WebKit::Download::Download):

git-svn-id: svn://svn.chromium.org/blink/trunk@137716 bbb929c8-8fbe-4397-9dbb-9b2b20218538