third_party/WebKit/Source/WebKit2/WebProcess/Downloads/Download.cpp
@@ -47,6 +47,7 @@ PassOwnPtr<Download> Download::create(DownloadManager& downloadManager, uint64_t
 
 Download::Download(DownloadManager& downloadManager, uint64_t downloadID, const ResourceRequest& request)
     : m_downloadManager(downloadManager)
+    , m_downloadID(downloadID)
     , m_request(request)
 #if USE(CFNETWORK)
     , m_allowOverwrite(false)
